--- a/style.css
+++ b/style.css
@@ -9,9 +9,13 @@ body {
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
     url(./city2.gif);
   color: white;
-  background-repeat: no-repeat;
+  background-repeat:no-repeat;
   background-size: cover;
   background-position: center;
+  height: 100%;
+  width: 100%;
+  background-attachment: fixed;
+  
 }
 .row {
   text-align: center;
@@ -19,7 +23,7 @@ body {
 .row > div {
   border: 4px solid rgb(71, 83, 94);
   border-radius: 10px;
-  border-style: dotted;
+  border-style: none;
 }
 .heading h1 {
   position: relative;
@@ -96,9 +100,17 @@ p {
 .icons {
   display: flex;
 }
-/* @media only screen and (min-width: 320px) and (max-width:991px) {
-  
-  .main{
-    flex-direction: column;
-  }
-} */
+.right-volume {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  background-color: rgb(227, 218, 218);
+  border: none;
+  padding: 10px;
+  z-index: 9999;
+}
+
+.right-volume img {
+  width: 35px;
+}
+
