--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ body {
   background-repeat:no-repeat;
   background-size: cover;
   background-position: center;
-  height: 100%;
-  width: 100%;
+  /* height: 100%;
+  width: 100%; */
   background-attachment: fixed;
   
 }
