--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@ body {
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
     url(./city2.gif);
   color: white;
-  background-repeat:no-repeat;
+  /* background-repeat:no-repeat; */
   background-size: cover;
   background-position: center;
   /* height: 100%;
   width: 100%; */
-  background-attachment: fixed;
+  background-attachment:fixed;
   
 }
 .row {
@@ -104,13 +104,13 @@ p {
   position: fixed;
   bottom: 10px;
   right: 10px;
-  background-color: rgb(227, 218, 218);
+  background-color: rgb(194, 195, 194);
   border: none;
   padding: 10px;
-  z-index: 9999;
+  z-index: 9;
 }
 
 .right-volume img {
-  width: 35px;
+  width: 30px;
 }
 
