--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body {
   /* background: black; */
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url(./city2.gif);
+    url(./city1.webp);
   color: white;
   /* background-repeat:no-repeat; */
   background-size: cover;
