--- a/style.css
+++ b/style.css
@@ -9,13 +9,13 @@ body {
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
     url(./city1.webp);
   color: white;
-  /* background-repeat:no-repeat; */
+  background-repeat:no-repeat;
   background-size: cover;
   background-position: center;
-  /* height: 100%;
-  width: 100%; */
+  height: 100%;
+  width: 100%;
   background-attachment:fixed;
-  
+  z-index: 0;
 }
 .row {
   text-align: center;
