--- a/style.css
+++ b/style.css
@@ -5,17 +5,21 @@
 @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,300;1,200;1,400;1,500&family=Orbitron:wght@500&family=Space+Mono&display=swap");
 
 body {
-  /* background: black; */
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url(./city1.webp);
-  color: white;
-  background-repeat:no-repeat;
+  margin: 0;
+  padding: 0;
+}
+
+.background-image {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background-image: url(./city1.webp);
+  background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  height: 100%;
-  width: 100%;
-  background-attachment:fixed;
-  z-index: 0;
+  z-index: -1;
 }
 @media only screen and (max-width: 600px) {
   /* Styles for mobile devices */
