--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   left: 0;
   height: 100vh;
   width: 100vw;
-  background-image: url(./city1.webp);
+  background: url(./city2.gif);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
