--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   left: 0;
   height: 100vh;
   width: 100vw;
-  background: url(./city2.gif);
+ background: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(./city2.gif);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
