--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body {
   margin: 0;
   padding: 0;
+  color: azure;
 }
 
 .background-image {
@@ -15,7 +16,7 @@ body {
   left: 0;
   height: 100vh;
   width: 100vw;
- background: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(./city2.gif);
+  background: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(./city2.gif);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
