--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ body {
 }
 .heading h1 {
   position: relative;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   font-family: "Orbitron", sans-serif;
   margin: auto 0;
   margin-top: 30vh;
